--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="PLEASE_TAKE_ASSESSMENT">Please take the updated self assessment</string>
     <string name="ASSESSMENT_REQUEST">To help India contain the pandemic we have updated the self assessment. Your responses will help our Doctors and medical researchers work more effectively. Help Aarogyasetu help India. Main Surakshit, Hum Surakshit, Bharat Surakshit.</string>
+    <string name="default_assessment"><![CDATA[Please note that information from this chat wll be used for monitoring& management of the current health crisi and research in the fight against COVID 19]]></string>
 </resources>
