--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,17 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="PLEASE_TAKE_ASSESSMENT">Please take the updated self assessment</string>
     <string name="ASSESSMENT_REQUEST">To help India contain the pandemic we have updated the self assessment. Your responses will help our Doctors and medical researchers work more effectively. Help Aarogyasetu help India. Main Surakshit, Hum Surakshit, Bharat Surakshit.</string>
+
+    <string name="active">Active</string>
+    <string name="recovered">Recovered</string>
+    <string name="total">Total</string>
+    <string name="deaths">Deaths</string>
+    <string name="covid_19">Covid-19</string>
+    <string name="country">Country</string>
+    <string name="cases">Cases</string>
+    <string name="increment_number">+232325</string>
+    <string name="number">2323236544</string>
+    <string name="covid_tracker">Covid Tracker</string>
+    <string name="footer">Copyright @ 2022 </string>
+    <string name="i_m_always_at_the_bottom_of_the_sidemenu">Copyright @ 2022</string>
 </resources>
